objects/WebService_Info__mdt/WebService_Info__mdt.object-meta.xml
<CustomObject>
    <label>Web Service Info</label>
    <pluralLabel>Web Services Info</pluralLabel>
</CustomObject>