objects/WebService_Info__mdt/fields/isMock__c.field-meta.xml
<CustomField>
    <fullName>isMock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mock</label>
    <type>Checkbox</type>
</CustomField>