objects/WebService_Info__mdt/fields/mockResponse__c.field-meta.xml
<CustomField>
    <fullName>mockResponse__c</fullName>
    <label>Mock response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>