objects/WebService_Info__mdt/fields/webServiceTokens__c.field-meta.xml
<CustomField>
    <fullName>webServiceTokens__c</fullName>
    <description>auth info</description>
    <label>Web Service Tokens</label>
    <referenceTo>webService_tokens__mdt</referenceTo>
    <relationshipLabel>Web Services Info</relationshipLabel>
    <relationshipName>Web_Services_Info</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>